--- a/crossing.html
+++ b/crossing.html
@@ -144,8 +144,61 @@ Someone please let me cross...
         </pre>
       </div>
   <script>
+    let idleTimer;
+    const idleTime = 30000; // 30 seconds
+    let isDialogueVisible = false;
+
+    function resetIdleTimer() {
+      clearTimeout(idleTimer);
+      if (isDialogueVisible) {
+        idleTimer = setTimeout(handleIdle, idleTime);
+      }
+    }
+
+    function handleIdle() {
+      if (isDialogueVisible) {
+        console.log("User idle for 30 seconds - redirecting to classroom.html");
+        fadeToClassroom();
+      }
+    }
+
+    function fadeToClassroom() {
+      document.body.style.transition = "background-color 2s ease-in, opacity 2s ease-in";
+      document.body.style.backgroundColor = "black";
+      document.body.style.opacity = "0";
+
+      setTimeout(() => {
+        window.location.href = "classroom.html";
+      }, 2000);
+    }
+
+    function checkDialogueVisibility() {
+      const dialogueBox = document.getElementById('dialogue-box');
+      const dialogueBox2 = document.getElementById('dialogue-box2');
+      const dialogueBox3 = document.getElementById('dialogue-box3');
+
+      const isAnyDialogueVisible =
+        dialogueBox.style.display === "block" ||
+        dialogueBox2.style.display === "block" ||
+        dialogueBox3.style.display === "block";
+
+      if (isAnyDialogueVisible && !isDialogueVisible) {
+        isDialogueVisible = true;
+        resetIdleTimer();
+      } else if (!isAnyDialogueVisible && isDialogueVisible) {
+        isDialogueVisible = false;
+        clearTimeout(idleTimer);
+      }
+    }
+
+    document.addEventListener('mousemove', resetIdleTimer);
+    document.addEventListener('mousedown', resetIdleTimer);
+    document.addEventListener('keypress', resetIdleTimer);
+    document.addEventListener('touchstart', resetIdleTimer);
+
     document.addEventListener("DOMContentLoaded", function () {
       document.body.classList.add("loaded");
+      checkDialogueVisibility();
     });
 
     const streetElement = document.getElementById('street');
@@ -166,19 +219,23 @@ Someone please let me cross...
     setInterval(updateSelf, 500);
 
     setTimeout(() => {
-    document.getElementById("dialogue-box").style.display = "block";
-  }, (maxPosition / 10) * 500 + 15000);
+      document.getElementById("dialogue-box").style.display = "block";
+      checkDialogueVisibility();
+    }, (maxPosition / 10) * 500 + 15000);
 
     document.getElementById("dialogue-box").addEventListener("click", function() {
         this.style.display = "none";
+        checkDialogueVisibility();
 
         setTimeout(() => {
             document.getElementById("dialogue-box2").style.display = "block";
+            checkDialogueVisibility();
         }, 5000);
       });
 
       document.getElementById("dialogue-box2").addEventListener("click", function() {
           this.style.display = "none";
+          checkDialogueVisibility();
 
           setTimeout(() => {
               document.body.style.opacity = "0";
@@ -188,15 +245,16 @@ Someone please let me cross...
                   document.getElementById("street").style.display = "none";
                   document.getElementById("empty-street").style.display = "block";
                   document.getElementById("clock").innerHTML = `
-╔════════════════════╗
-║ █████day │ 7:49 AM ║
-╚════════════════════╝
+  ╔════════════════════╗
+  ║ █████day │ 7:49 AM ║
+  ╚════════════════════╝
             `;
 
                   document.body.style.opacity = "1";
                   document.body.style.backgroundColor = "#ece6e3";
                   setTimeout(() => {
                     document.getElementById("dialogue-box3").style.display = "block";
+                    checkDialogueVisibility();
                   }, 2000);
                 }, 2000);
               }, 5000);
@@ -204,6 +262,7 @@ Someone please let me cross...
 
           document.getElementById("dialogue-box3").addEventListener("click", function() {
             this.style.display = "none";
+            checkDialogueVisibility();
 
             let person = document.getElementById("moving-person");
             let moveUp = 0;
@@ -792,7 +851,7 @@ Someone please let me cross...
 
       setInterval(updatestreet, 500);
 
-      function fadeToBlackAndRedirect() {
+      function fadeToBlackAndRedirect(destination) {
        let fadeOverlay = document.createElement("div");
        fadeOverlay.style.position = "fixed";
        fadeOverlay.style.top = "0";
@@ -809,12 +868,16 @@ Someone please let me cross...
        }, 10);
 
        setTimeout(() => {
-         window.location.href = "context.html";
+         window.location.href = destination;
        }, 2000);
      }
 
-     document.getElementById("context").addEventListener("click", fadeToBlackAndRedirect);
-     document.getElementById("words_context").addEventListener("click", fadeToBlackAndRedirect);
+     document.getElementById("context").addEventListener("click", function() {
+       fadeToBlackAndRedirect("context.html");
+     });
+     document.getElementById("words_context").addEventListener("click", function() {
+       fadeToBlackAndRedirect("context.html");
+     });
   </script>
 </body>
 </html>
